<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.redes.taller_manillas.Principal">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.02"
            android:fontFamily="serif"
            android:text="@string/manilla"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.02"
            android:fontFamily="serif"
            android:text="@string/numero"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtnumero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="serif"
            android:inputType="textPersonName|number" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.02"
            android:fontFamily="serif"
            android:text="@string/material"
            android:textAlignment="viewStart"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/cbxmaterial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.17" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.02"
            android:fontFamily="serif"
            android:text="@string/dije"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/cbxdije"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.15" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/tipo"
            android:textAlignment="viewStart"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/cbxtipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.17" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.02"
            android:fontFamily="serif"
            android:text="@string/pago"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/cbxpago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.17" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCalcular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="calcular"
                android:text="@string/calcular" />

            <Button
                android:id="@+id/btnBorrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="Borrar"
                android:text="@string/borrar" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.02"
            android:fontFamily="serif"
            android:text="@string/total_pagar"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtpago_resultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
